5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1594_2425.log
== TEST (2019-03-19 16:20:05) 
-- CODE:
d=input("Insira a distancia percorrida:")
c=input("Insira o total de combustivel gasto")


-- OUTPUT:
2.333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:21:22) 
-- CODE:
d=input("Insira a distancia percorrida:")
c=input("Insira o total de combustivel gasto:")
cm= d/c
print(round(cm,3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cm= d/c
TypeError: unsupported operand type(s) for /: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:21:51) 
-- CODE:
d=input(int("Insira a distancia percorrida:")
c=input(int("Insira o total de combustivel gasto:")
cm= d/c
print(round(cm,3), "km/l")


-- ERROR:
File "XXXX", line 2
    c=input(int("Insira o total de combustivel gasto:")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:10) 
-- CODE:
d=input(int("Insira a distancia percorrida:")
C=input(int("Insira o total de combustivel gasto:")
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
File "XXXX", line 2
    C=input(int("Insira o total de combustivel gasto:")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:12) 
-- CODE:
d=input(int("Insira a distancia percorrida:")
C=input(int("Insira o total de combustivel gasto:")
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
File "XXXX", line 2
    C=input(int("Insira o total de combustivel gasto:")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:13) 
-- CODE:
d=input(int("Insira a distancia percorrida:")
C=input(int("Insira o total de combustivel gasto:")
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
File "XXXX", line 2
    C=input(int("Insira o total de combustivel gasto:")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:13) 
-- CODE:
d=input(int("Insira a distancia percorrida:")
C=input(int("Insira o total de combustivel gasto:")
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
File "XXXX", line 2
    C=input(int("Insira o total de combustivel gasto:")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:24) 
-- CODE:
d=input(int("Insira a distancia percorrida:")
C=input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
File "XXXX", line 2
    C=input(int("Insira o total de combustivel gasto:"))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:39) 
-- CODE:
d=input(int("Insira a distancia percorrida:")
C=input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
File "XXXX", line 2
    C=input(int("Insira o total de combustivel gasto:"))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:40) 
-- CODE:
d=input(int("Insira a distancia percorrida:")
C=input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
File "XXXX", line 2
    C=input(int("Insira o total de combustivel gasto:"))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:41) 
-- CODE:
d=input(int("Insira a distancia percorrida:")
C=input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
File "XXXX", line 2
    C=input(int("Insira o total de combustivel gasto:"))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:47) 
-- CODE:
d=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:49) 
-- CODE:
d=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:50) 
-- CODE:
d=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:55) 
-- CODE:
d=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:24:21) 
-- CODE:
d= input("Insira a distancia percorrida:")
C= input(int("Insira o total de combustivel gasto:")
cm= d/C
print(int(round(cm, 3), "km/l"))


-- ERROR:
File "XXXX", line 3
    cm= d/C
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:24:31) 
-- CODE:
d= input("Insira a distancia percorrida:")
C= input("Insira o total de combustivel gasto:")
cm= d/C
print(int(round(cm, 3), "km/l"))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cm= d/C
TypeError: unsupported operand type(s) for /: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:25:32) 
-- CODE:
d=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:25:34) 
-- CODE:
d=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:25:35) 
-- CODE:
d=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:25:36) 
-- CODE:
d=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:25:37) 
-- CODE:
d=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:25:37) 
-- CODE:
d=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:25:37) 
-- CODE:
d=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:25:37) 
-- CODE:
d=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:25:37) 
-- CODE:
d=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:25:38) 
-- CODE:
d=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:25:38) 
-- CODE:
d=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:25:38) 
-- CODE:
d=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= d/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:26:05) 
-- CODE:
D=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    D=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:26:05) 
-- CODE:
D=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    D=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:26:07) 
-- CODE:
D=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    D=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:26:10) 
-- CODE:
D=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    D=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:26:11) 
-- CODE:
D=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    D=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:26:11) 
-- CODE:
D=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    D=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:26:12) 
-- CODE:
D=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    D=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:26:12) 
-- CODE:
D=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    D=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:26:12) 
-- CODE:
D=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    D=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:26:13) 
-- CODE:
D=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    D=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:26:13) 
-- CODE:
D=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    D=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:26:13) 
-- CODE:
D=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    D=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:26:13) 
-- CODE:
D=input(int("Insira a distancia percorrida:"))
C= input(int("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    D=input(int("Insira a distancia percorrida:"))
ValueError: invalid literal for int() with base 10: 'Insira a distancia percorrida:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:51:21) 
-- CODE:
D= int(input("Insira o total de combustivel gasto:"))
C= int(input("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    D= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:51:29) 
-- CODE:
D= int(input("Insira o total de combustivel gasto:"))
C= int(input("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- EXECUTION TIME:
0.11685
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 1, in <module>
    D= int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:51:31) 
-- CODE:
D= int(input("Insira o total de combustivel gasto:"))
C= int(input("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    D= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:51:33) 
-- CODE:
D= int(input("Insira o total de combustivel gasto:"))
C= int(input("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    D= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:52:25) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
cm= D/C
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:52:40) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
cm= d/c
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:52:47) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
cm= d/c
print(round(cm, 3), "km/l")


-- EXECUTION TIME:
0.136678
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:53:55) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
cm= d/c
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:54:06) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
cm= d/c
print(round(cm, 3), "km/l")


-- EXECUTION TIME:
0.105263
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:54:08) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
cm= d/c
print(round(cm, 3), "km/l")


-- EXECUTION TIME:
0.124098
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:54:09) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
cm= d/c
print(round(cm, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:54:23) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3), "km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:54:28) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3), "km/l")


-- EXECUTION TIME:
0.168496
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:54:29) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3), "km/l")


-- EXECUTION TIME:
0.17086
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:54:30) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3), "km/l")


-- EXECUTION TIME:
0.177811
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 2, in <module>
    c= int(input())
ValueError: invalid literal for int() with base 10: '124.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:54:30) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3), "km/l")


-- EXECUTION TIME:
0.235098
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 2, in <module>
    c= int(input())
ValueError: invalid literal for int() with base 10: '464.6'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:54:30) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3), "km/l")


-- EXECUTION TIME:
0.235718
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 2, in <module>
    c= int(input())
ValueError: invalid literal for int() with base 10: '124.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:54:30) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3), "km/l")


-- EXECUTION TIME:
0.20703
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 2, in <module>
    c= int(input())
ValueError: invalid literal for int() with base 10: '124.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:54:30) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3), "km/l")


-- EXECUTION TIME:
0.171396
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 2, in <module>
    c= int(input())
ValueError: invalid literal for int() with base 10: '124.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:54:46) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3),"km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:54:51) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3),"km/l")


-- EXECUTION TIME:
0.179472
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:54:52) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= int(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3),"km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:55:21) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= float(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3),"km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:55:31) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= float(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3),"km/l")


-- EXECUTION TIME:
0.154059
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:55:32) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= float(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3),"km/l")


-- EXECUTION TIME:
0.20927
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:55:32) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= float(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3),"km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:57:52) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= float(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3),"km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:58:32) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= float(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3),"km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:31:30) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= float(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3),"km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:31:41) 
-- CODE:
d= int(input("Insira o total de combustivel gasto:"))
c= float(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3),"km/l")


-- EXECUTION TIME:
0.13648
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:32:35) 
-- CODE:
d= int(input("Insira a distancia em km:"))
c= float(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3),"km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:32:52) 
-- CODE:
d= int(input("Insira a distancia em km:"))
c= int(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3),"km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:32:56) 
-- CODE:
d= int(input("Insira a distancia em km:"))
c= int(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3),"km/l")


-- EXECUTION TIME:
0.222577
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:33:05) 
-- CODE:
d= int(input("Insira a distancia em km:"))
c= int(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3),"km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:33:11) 
-- CODE:
d= int(input("Insira a distancia em km:"))
c= int(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3),"km/l")


-- EXECUTION TIME:
0.214554
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 1, in <module>
    d= int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:51:37) 
-- CODE:
d= float(input("Insira a distancia em km:"))
c= float(input("Insira o total de combustivel gasto:"))
x= d/c
print(round(x, 3),"km/l")


-- EXECUTION TIME:
0.151604
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
